; ModuleID = '/home/carl/AnghaBench/php-src/ext/fileinfo/libmagic/extr_magic.c_magic_error.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/fileinfo/libmagic/extr_magic.c_magic_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.magic_set = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i8* }

@.str = private unnamed_addr constant [27 x i8] c"Magic database is not open\00", align 1
@EVENT_HAD_ERR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @magic_error(%struct.magic_set* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.magic_set*, align 8
  store %struct.magic_set* %0, %struct.magic_set** %3, align 8
  %4 = load %struct.magic_set*, %struct.magic_set** %3, align 8
  %5 = icmp eq %struct.magic_set* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %22

7:                                                ; preds = %1
  %8 = load %struct.magic_set*, %struct.magic_set** %3, align 8
  %9 = getelementptr inbounds %struct.magic_set, %struct.magic_set* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = load i32, i32* @EVENT_HAD_ERR, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %7
  %15 = load %struct.magic_set*, %struct.magic_set** %3, align 8
  %16 = getelementptr inbounds %struct.magic_set, %struct.magic_set* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  br label %20

19:                                               ; preds = %7
  br label %20

20:                                               ; preds = %19, %14
  %21 = phi i8* [ %18, %14 ], [ null, %19 ]
  store i8* %21, i8** %2, align 8
  br label %22

22:                                               ; preds = %20, %6
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
